# Copyright (C) Internet Systems Consortium, Inc. ("ISC")
#
# SPDX-License-Identifier: MPL-2.0
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0.  If a copy of the MPL was not distributed with this
# file, you can obtain one at https://mozilla.org/MPL/2.0/.
#
# See the COPYRIGHT file distributed with this work for additional
# information regarding copyright ownership.

arm_srcset.add(
    files(
        'advanced.inc.rst',
        'build.inc.rst',
        'catz.inc.rst',
        'changelog.rst',
        'chapter1.rst',
        'chapter10.rst',
        'chapter2.rst',
        'chapter3.rst',
        'chapter4.rst',
        'chapter5.rst',
        'chapter6.rst',
        'chapter7.rst',
        'chapter9.rst',
        'config-auth.inc.rst',
        'config-intro.inc.rst',
        'config-resolve.inc.rst',
        'dlz.inc.rst',
        'dns-ops.inc.rst',
        'dnssec-guide.rst',
        'dnssec.inc.rst',
        'dyndb.inc.rst',
        'general.rst',
        'history.rst',
        'index.rst',
        'intro-dns-bind.inc.rst',
        'intro-security.inc.rst',
        'introduction.inc.rst',
        'logging-categories.inc.rst',
        'managed-keys.inc.rst',
        'manpages.rst',
        'notes.rst',
        'pkcs11.inc.rst',
        'platforms.inc.rst',
        'plugins.inc.rst',
        'reference.rst',
        'requirements.inc.rst',
        'rpz.inc.rst',
        'security.inc.rst',
        'sig0.inc.rst',
        'troubleshooting.inc.rst',
        'tsig.inc.rst',
        'zones.inc.rst',
    ),

    files(
        'dns-security-overview.png',
        'dns-servers.png',
        'dns-tree.png',
        'name-resolution.png',
        'primary-secondary.png',
        'recursive-query.png',
        'resolver-forward.png',
    ),

    files(
        'dns-security-overview.dia',
        'dns-servers.dia',
        'dns-tree.dia',
        'name-resolution.dia',
        'primary-secondary.dia',
        'recursive-query.dia',
        'resolver-forward.dia',
    ),

    files(
        '_ext' / 'iscconf.py',
        '_ext' / 'mergegrammar.py',
        '_ext' / 'namedconf.py',
        '_ext' / 'rndcconf.py',
        'conf.py',
        '_static' / 'custom.css',
    ),
)
